# Nuua

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  nuua.cpp
.ignore/include/: parser.hpp  rules.hpp  virtual_machine.hpp
Analyzer/: CMakeLists.txt
Analyzer/include/: analyzer.hpp  block.hpp  module.hpp  type.hpp
Analyzer/src/: analyzer.cpp  block.cpp  module.cpp  type.cpp
Application/: CMakeLists.txt
Application/include/: application.hpp
Application/src/: application.cpp
Compiler/: CMakeLists.txt
Compiler/include/: compiler.hpp  memory.hpp  opcodes.hpp  program.hpp  type.hpp  value.hpp
Compiler/src/: compiler.cpp  memory.cpp  program.cpp  type.cpp  value.cpp
Lexer/: CMakeLists.txt
Lexer/include/: lexer.hpp  tokens.hpp
Lexer/src/: lexer.cpp  tokens.cpp
Lib/: list.nu  string.nu  utils.nu
Logger/: CMakeLists.txt
Logger/include/: logger.hpp  rang.hpp
Logger/src/: logger.cpp
Parser/: CMakeLists.txt
Parser/include/: block.hpp  parser.hpp  parser_optimizer.hpp  rules.hpp  type.hpp
Parser/src/: block.cpp  parser-old.cpp  parser.cpp  parser_optimizer.cpp  rules.cpp  type.cpp
Utilities/include/: robin_hood.hpp
Virtual-Machine/: CMakeLists.txt
Virtual-Machine/include/: operation.hpp  virtual_machine.hpp
Virtual-Machine/src/: operation.cpp  virtual_machine.cpp
benchmarks/: function.nu  function.py  lists.nu  loop.js  loop.nu  loop.php  loop.py  loop2.nu  loop2.py
examples/basic/: lists.nu  operations.nu  variables.nu
examples/benchmarks/: loop.nu  loop.php  loop.py  loop2.nu
examples/compiler/: bad_list_cast.nu  bad_types.nu  function.nu  good_types.nu  inner_type.nu  undeclared.nu
examples/static/: auto_cast.nu  callback.nu  cast.nu  class.nu  dict.nu  function.nu  list.nu  loop.nu  simple_callback.nu  simple_cast.nu  simple_function.nu  simple_variable.nu  test.nu  variable.nu
other_tests/: closures.js  funtype.js  funtype.py  imports.py  imports2.py  lambda.py  sample_import.py
resources/: icon.aps  icon.psd
sample_app/: nuua.json  operations.nu  person.nu  project.nu
simple_app/: BREAKS.nu  BREAKS2.nu  a.nu  classes.nu  del.nu  fib.nu  fib.py  mod.nu  more.nu  rect.nu  test.nu  test2.nu
syntax/: classes.nu  closures.nu  control_flow.nu  functions.nu  if.nu  imports.nu  loops.nu  print.nu  references.nu  simple.nu  type_cast.nu  variables.nu
